--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "ECommerceApp",
-  "displayName": "ECommerceApp"
+  "name": "ParcelDeliveryApp",
+  "displayName": "ParcelDeliveryApp"
 }
