--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "svgr": "yarn run svgr-icons && yarn run svgr-brands && yarn run svgr-illustrations"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.0.0",
     "@react-native-firebase/messaging": "^10.0.0",
@@ -23,6 +24,7 @@
     "@shopify/restyle": "^1.3.1",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-camera": "^3.40.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
