--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "paths": {
       "*": ["src/*"],
       "@assets/*": ["src/assets/*"],
+      "@context": ["src/context"],
       "@utils": ["src/utils"],
       "@components": ["src/components"],
       "@views": ["src/views"],
