--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -203,6 +203,8 @@ dependencies {
 
     implementation "com.google.firebase:firebase-messaging"
 
+    implementation 'com.google.firebase:firebase-storage'
+
     implementation 'androidx.multidex:multidex:2.0.1'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
