--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,5 @@
 {
-  "bracketSpacing": true,
-  "jsxBracketSameLine": true,
+  "printWidth": 100,
   "singleQuote": true,
-  "trailingComma": "all",
-  "arrowParens": "avoid"
+  "trailingComma": "all"
 }
