--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
+  "bracketSpacing": true,
+  "jsxBracketSameLine": true,
   "printWidth": 100,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "arrowParens": "avoid"
 }
