--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -205,6 +205,8 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-storage'
 
+    implementation 'com.google.firebase:firebase-auth'
+
     implementation 'androidx.multidex:multidex:2.0.1'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
