--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/cameraroll": "^4.0.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.0.0",
+    "@react-native-firebase/auth": "^10.1.0",
     "@react-native-firebase/messaging": "^10.0.0",
     "@react-native-firebase/storage": "^10.1.0",
     "@react-navigation/bottom-tabs": "^5.11.2",
