--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "svgr": "yarn run svgr-icons && yarn run svgr-brands && yarn run svgr-illustrations"
   },
   "dependencies": {
+    "@digieggs/react-native-calling-code-picker": "^1.0.12",
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/cameraroll": "^4.0.1",
     "@react-native-community/masked-view": "^0.1.10",
