nav horizontal transition config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
       "*": ["src/*"],
       "@assets/*": ["src/assets/*"],
       "@data": ["src/data"],
+      "@constants": ["src/constants"],
       "@context": ["src/context"],
       "@utils": ["src/utils"],
       "@components": ["src/components"],
